WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100245
[EFL][AC] Fix build break when AC is enabled
https://bugs.webkit.org/show_bug.cgi?id=100245
Summary
[EFL][AC] Fix build break when AC is enabled
Sudarsana Nagineni (babu)
Reported
2012-10-24 06:52:31 PDT
In file included from WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:24:0: WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.h:117:5: error: 'Evas_GL' does not name a type WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.h:118:5: error: 'Evas_GL_Context' does not name a type WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.h:119:5: error: 'Evas_GL_Surface' does not name a type WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp: In function 'bool ewk_view_create_gl_surface(const Evas_Object*, const WebCore::IntSize&)': WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:545:15: error: 'EwkViewImpl' has no member named 'evasGlSurface' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:546:11: error: 'EwkViewImpl' has no member named 'evasGlSurface' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:546:56: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:547:16: error: 'EwkViewImpl' has no member named 'evasGlSurface' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:551:38: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:551:52: error: 'EwkViewImpl' has no member named 'evasGlSurface' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp: In function 'bool ewk_view_accelerated_compositing_mode_enter(const Evas_Object*)': WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:562:15: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:568:11: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:569:16: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:572:11: error: 'EwkViewImpl' has no member named 'evasGlContext' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:572:56: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:573:16: error: 'EwkViewImpl' has no member named 'evasGlContext' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:574:28: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:575:15: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:580:39: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:580:53: error: 'EwkViewImpl' has no member named 'evasGlContext' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:581:15: error: 'EwkViewImpl' has no member named 'evasGlContext' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:583:28: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:584:15: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp: In function 'bool ewk_view_accelerated_compositing_mode_exit(const Evas_Object*)': WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:597:39: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:599:15: error: 'EwkViewImpl' has no member named 'evasGlSurface' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:600:39: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:600:53: error: 'EwkViewImpl' has no member named 'evasGlSurface' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:601:15: error: 'EwkViewImpl' has no member named 'evasGlSurface' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:604:15: error: 'EwkViewImpl' has no member named 'evasGlContext' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:605:39: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:605:53: error: 'EwkViewImpl' has no member named 'evasGlContext' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:606:15: error: 'EwkViewImpl' has no member named 'evasGlContext' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:609:24: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:610:11: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp: In function 'void _ewk_view_smart_calculate(Evas_Object*)': WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:635:33: error: 'EwkViewImpl' has no member named 'evasGlSurface' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:655:39: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:655:53: error: 'EwkViewImpl' has no member named 'evasGlSurface' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:656:15: error: 'EwkViewImpl' has no member named 'evasGlSurface' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp: In function 'void ewk_view_display(Evas_Object*, const WebCore::IntRect&)': WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:1274:32: error: 'EwkViewImpl' has no member named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:1274:46: error: 'EwkViewImpl' has no member named 'evasGlSurface' WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:1274:67: error: 'EwkViewImpl' has no member named 'evasGlContext' ICECC[8610] 16:48:33: Compiled on 10.237.72.169 make[2]: *** [Source/WebKit2/CMakeFiles/ewebkit2.dir/UIProcess/API/efl/ewk_view.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... In file included from WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:22:0: WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.h:117:5: error: 'Evas_GL' does not name a type WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.h:118:5: error: 'Evas_GL_Context' does not name a type WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.h:119:5: error: 'Evas_GL_Surface' does not name a type WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp: In constructor 'EwkViewImpl::EwkViewImpl(Evas_Object*)': WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:120:7: error: class 'EwkViewImpl' does not have any field named 'evasGl' WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:121:7: error: class 'EwkViewImpl' does not have any field named 'evasGlContext' WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:122:7: error: class 'EwkViewImpl' does not have any field named 'evasGlSurface' ICECC[8604] 16:48:37: Compiled on 10.237.72.71 make[2]: *** [Source/WebKit2/CMakeFiles/ewebkit2.dir/UIProcess/API/efl/EwkViewImpl.cpp.o] Error 1 make[1]: *** [Source/WebKit2/CMakeFiles/ewebkit2.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch
(1.58 KB, patch)
2012-10-24 07:03 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-10-24 07:03:27 PDT
Created
attachment 170388
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-24 07:33:50 PDT
Comment on
attachment 170388
[details]
Patch Rejecting
attachment 170388
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: /Source/WebKit/chromium/third_party/libjpeg_turbo --revision 149334 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 36>At revision 149334. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/14569204
Dominik Röttsches (drott)
Comment 3
2012-10-24 07:41:34 PDT
Committed
r132353
: <
http://trac.webkit.org/changeset/132353
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug