[EFL][AC] Fix build break when AC is enabled https://bugs.webkit.org/show_bug.cgi?id=100245

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-10-24
Reviewed by Kenneth Rohde Christiansen.

Fix build break after r132337.

* UIProcess/API/efl/EwkViewImpl.h:
* UIProcess/API/efl/ewk_view.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@132353 bbb929c8-8fbe-4397-9dbb-9b2b20218538