third_party/WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewImpl.h
@@ -31,6 +31,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <wtf/OwnPtr.h>
 #include <wtf/RefPtr.h>
 
+#if USE(ACCELERATED_COMPOSITING)
+#include <Evas_GL.h>
+#endif
+
 #define EWK_VIEW_PRIV_GET(smartData, priv)                                     \
     EwkViewImpl* priv = smartData->priv
 
