third_party/WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp
@@ -76,10 +76,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "WebInspectorProxy.h"
 #endif
 
-#if USE(ACCELERATED_COMPOSITING)
-#include <Evas_GL.h>
-#endif
-
 #if USE(TILED_BACKING_STORE)
 #include "PageViewportController.h"
 #include "PageViewportControllerClientEfl.h"
